Closed Bug 1483398 Opened 6 years ago Closed 5 years ago

Intermittent devtools/client/webreplay/mochitest/browser_dbg_rr_replay-02.js | Test timed out -

Categories

(Core Graveyard :: Web Replay, defect, P5)

defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 disabled, firefox69 disabled, firefox70 disabled, firefox71 fixed)

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- disabled
firefox69 --- disabled
firefox70 --- disabled
firefox71 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bhackett1024)

References

Details

(Keywords: intermittent-failure, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Filed by: csabou [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=193938145&repo=mozilla-inbound

https://queue.taskcluster.net/v1/task/CqxDGXUyTzK_UiDCL2PNOA/runs/0/artifacts/public/logs/live_backing.log

12:35:04     INFO - TEST-PASS | devtools/client/debugger/new/test/mochitest/browser_dbg_rr_replay-02.js | Source is doc_rr_continuous.html - 
12:35:04     INFO - Buffered messages finished
12:35:04     INFO - TEST-UNEXPECTED-FAIL | devtools/client/debugger/new/test/mochitest/browser_dbg_rr_replay-02.js | Test timed out - 
12:35:09     INFO - GECKO(851) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x17007C,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
12:35:09     INFO - GECKO(851) | 2018-08-14 12:35:09: minidump.cc:3009: ERROR: MinidumpMemoryList could not store memory region 2/85, 0x10efd9f18+0x20e8
12:35:09     INFO - GECKO(851) | 2018-08-14 12:35:09: minidump.cc:5811: ERROR: GetStream could not read stream type 5
12:35:09     INFO - Console message: [JavaScript Error: "remote browser crashed while on http://example.com/browser/devtools/client/debugger/new/test/mochitest/examples/doc_rr_continuous.html
12:35:09     INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 8}]
12:35:09     INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:8:5
12:35:09     INFO - EventListener.handleEvent*e10s_init@chrome://mochikit/content/mochitest-e10s-utils.js:6:3
12:35:09     INFO - testInit@chrome://mochikit/content/browser-test.js:110:5
12:35:09     INFO - setTimeout handler*@chrome://mochikit/content/browser-test.js:30:3
12:35:09     INFO - loadChromeScripts@jar:file:///var/folders/2l/mxdk6jh950796w3vgqv51_k000000w/T/tmpHIgbWB.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:15:3
12:35:09     INFO - loadMochitest@jar:file:///var/folders/2l/mxdk6jh950796w3vgqv51_k000000w/T/tmpHIgbWB.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:107:3
12:35:09     INFO - @tests/mochitest/runtests.py:1775:1
12:35:09     INFO - @tests/mochitest/runtests.py:1757:2
12:35:09     INFO - evaluate.sandbox/promise<@chrome://marionette/content/evaluate.js:128:13
12:35:09     INFO - evaluate.sandbox@chrome://marionette/content/evaluate.js:97:17
12:35:09     INFO - GeckoDriver.prototype.execute_@chrome://marionette/content/driver.js:1030:19
12:35:09     INFO - async*GeckoDriver.prototype.executeScript@chrome://marionette/content/driver.js:900:24
12:35:09     INFO - Async*despatch@chrome://marionette/content/server.js:297:20
12:35:09     INFO - async*execute@chrome://marionette/content/server.js:271:11
12:35:09     INFO - async*onPacket/<@chrome://marionette/content/server.js:246:15
12:35:09     INFO - async*onPacket@chrome://marionette/content/server.js:245:8
12:35:09     INFO - _onJSONObjectReady/<@chrome://marionette/content/transport.js:490:9
12:35:09     INFO - 
12:35:09     INFO - Removing tab.
12:35:09     INFO - Waiting for event: 'TabClose' on [object XULElement].
12:35:09     INFO - Got event: 'TabClose' on [object XULElement].
12:35:09     INFO - Tab removed and finished closing
12:35:09     INFO - Console message: [JavaScript Warning: "Loading failed for the <script> with source “chrome://browser/content/aboutTabCrashed.js”." {file: "about:tabcrashed?e=tabcrashed&u=http%3A//example.com/browser/devtools/client/debugger/new/test/mochitest/examples/doc_rr_continuous.html&c=UTF-8&f=regular&d=RECORD/REPLAY" line: 99}]
12:35:09     INFO - GECKO(851) | MEMORY STAT | vsize 4953MB | residentFast 905MB | heapAllocated 125MB
12:35:09     INFO - TEST-OK | devtools/client/debugger/new/test/mochitest/browser_dbg_rr_replay-02.js | took 50445ms
12:35:09     INFO - checking window state
12:35:09     INFO - Console message: [JavaScript Error: "Can not decrement crashed tab count to below 0" {file: "resource:///modules/ContentCrashHandlers.jsm" line: 545}]
12:35:09     INFO - onAboutTabCrashedUnload@resource:///modules/ContentCrashHandlers.jsm:545:7
12:35:09     INFO - receiveMessage@resource:///modules/ContentCrashHandlers.jsm:181:9
12:35:09     INFO - callListeners@resource://gre/modules/remotepagemanager/MessagePort.jsm:92:9
12:35:09     INFO - portMessageReceived@resource://gre/modules/remotepagemanager/RemotePageManagerParent.jsm:92:5
12:35:09     INFO - callListeners@resource://gre/modules/remotepagemanager/MessagePort.jsm:92:9
12:35:09     INFO - ChromeMessagePort.prototype.observe@resource://gre/modules/remotepagemanager/RemotePageManagerParent.jsm:239:3
There are 33 failures in the last 7 days. 
They occur mostly on osx-10-10 opt and 2 classifications on macosx64-nightly opt.
Recent failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=207445475&repo=autoland&lineNumber=24256

jlast: Hi, Can you please point to someone that can have a look at this? Thanks!
Whiteboard: [stockwell needswork]
Summary: Intermittent devtools/client/debugger/new/test/mochitest/browser_dbg_rr_replay-02.js | Test timed out - → Intermittent devtools/client/webreplay/mochitest/browser_dbg_rr_replay-02.js | Test timed out -
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

I'll look into this.

Flags: needinfo?(bugs)

Thank you.

See Also: → 1580104

Sorry for the delay here, I wasn't able to reproduce this locally and debugged it via try. The problem is due to some uses of shared memory added by bug 1563063, where the shared memory can be updated by other processes after it is created. Writes by other processes to mutable shared memory aren't recorded/replayed (we only record/replay a single process), so cases like this need to be instrumented with calls to RecordReplayValue to get the same value while replaying as was read while recording. This is a little invasive though, and in this case I think it would be better/simpler to disable idle scheduling in recording/replaying processes.

Assignee: nobody → bhackett1024
Blocks: dbg-71
Status: REOPENED → ASSIGNED
Whiteboard: [stockwell disable-recommended] → [stockwell disable-recommended] [debugger-mvp]

This is a web replay bug actually, and shouldn't block the debugger backlog meta.

Component: Debugger → Web Replay
Product: DevTools → Core
No longer blocks: dbg-71
Whiteboard: [stockwell disable-recommended] [debugger-mvp] → [stockwell disable-recommended]

Disabling cross-process idle handling when web replay is used sounds good to me.

Pushed by bhackett@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b15ef79c51de
Disable idle scheduler when recording/replaying, r=smaug.
Status: ASSIGNED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: