Bug 1483398 - Disable idle scheduler when recording/replaying, r=smaug.

Differential Revision: https://phabricator.services.mozilla.com/D47257

--HG--
extra : moz-landing-system : lando